[project]
name = "naminter"
version = "1.0.7"
description = "A Python package and command-line interface (CLI) tool for asynchronous OSINT username enumeration using the WhatsMyName dataset"
authors = [
    {name = "3xp0rt", email = "contact@3xp0rt.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Utilities"
]
keywords = [
    "osint",
    "username",
    "availability",
    "checker",
    "whatsmyname",
    "reconnaissance",
    "cybersecurity",
    "investigation",
    "naminter"
]
dependencies = [
    "click>=8.3.0",
    "curl-cffi>=0.13.0",
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "rich>=14.2.0",
    "rich-click>=1.9.4",
    "weasyprint>=66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.4",
]

[project.urls]
Homepage = "https://github.com/3xp0rt/naminter"
Repository = "https://github.com/3xp0rt/naminter"
"Bug Tracker" = "https://github.com/3xp0rt/naminter/issues"
Documentation = "https://github.com/3xp0rt/naminter#readme"
Source = "https://github.com/3xp0rt/naminter"

[project.scripts]
naminter = "naminter.cli.main:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = []

[tool.ruff.lint]
preview = true
select = [
    'I',      # isort
    'F',      # pyflakes
    'E',      # pycodestyle errors
    'W',      # pycodestyle warnings
    'PL',     # pylint
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'UP',     # pyupgrade
    'ARG001', # unused-function-args
    'SIM',    # flake8-simplify
    'TCH',    # flake8-type-checking
    'TID',    # flake8-tidy-imports
    'Q',      # flake8-quotes
    'RUF',    # ruff-specific rules
    'A',      # flake8-builtins
    'COM',    # flake8-commas
    'DTZ',    # flake8-datetimez
    'EM',     # flake8-errmsg
    'G',      # flake8-logging-format
    'ICN',    # flake8-import-conventions
    'N',      # pep8-naming
    'PIE',    # flake8-pie
    'T20',    # flake8-print
    'YTT',    # flake8-2020
]
ignore = [
    'PLR0913',  # too-many-arguments
    'PLR0917',  # too-many-locals
    'PLR0904',  # too-many-branches
    'E701',     # multiple-statements-on-one-line
    'B008',     # do-not-perform-function-calls-in-argument-defaults
    'C901',     # too-complex
    'PLR2004',  # magic-value-comparison
    'PLR0912',  # too-many-branches
    'PLR0915',  # too-many-statements
    'PLR0916',  # too-many-boolean-expressions
    'COM812',   # missing-trailing-comma (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.ruff.lint.isort]
known-first-party = ["naminter"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
preview = true
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 79
