[project]
name = "naminter"
version = "1.0.8"
description = "A Python package and command-line interface (CLI) tool for asynchronous OSINT username enumeration using the WhatsMyName dataset"
authors = [
    {name = "3xp0rt", email = "contact@3xp0rt.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Utilities"
]
keywords = [
    "osint",
    "username",
    "availability",
    "checker",
    "whatsmyname",
    "reconnaissance",
    "cybersecurity",
    "investigation",
    "naminter"
]
dependencies = [
    "curl-cffi>=0.14.0",
    "jsonschema>=4.26.0",
    "orjson>=3.11.7",
    "click>=8.3.1",
    "rich>=14.3.2",
    "rich-click>=1.9.7",
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "weasyprint>=68.1",
    "pathvalidate>=3.3.1",
    "uvloop>=0.22.1",
]

[project.optional-dependencies]
core = [
    "curl-cffi>=0.14.0",
    "jsonschema>=4.26.0",
    "orjson>=3.11.5",
]
cli = [
    "click>=8.3.1",
    "rich>=14.3.2",
    "rich-click>=1.9.7",
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "weasyprint>=68.1",
    "pathvalidate>=3.3.1",
    "uvloop>=0.22.1",
]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.12",
    "mkdocs>=1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.4",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[project.urls]
Homepage = "https://github.com/3xp0rt/naminter"
Repository = "https://github.com/3xp0rt/naminter"
Issues = "https://github.com/3xp0rt/naminter/issues"
Documentation = "https://3xp0rt.github.io/Naminter/"

[project.scripts]
naminter = "naminter.cli.main:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "30 days"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
respect-gitignore = true

[tool.ruff.lint]
preview = true
select = [
    'I',      # isort
    'F',      # pyflakes
    'E',      # pycodestyle errors
    'W',      # pycodestyle warnings
    'PL',     # pylint
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'UP',     # pyupgrade
    'ARG',    # flake8-unused-arguments
    'SIM',    # flake8-simplify
    'TCH',    # flake8-type-checking
    'TID',    # flake8-tidy-imports
    'Q',      # flake8-quotes
    'RUF',    # ruff-specific rules
    'A',      # flake8-builtins
    'COM',    # flake8-commas
    'DTZ',    # flake8-datetimez
    'EM',     # flake8-errmsg
    'G',      # flake8-logging-format
    'ICN',    # flake8-import-conventions
    'N',      # pep8-naming
    'PIE',    # flake8-pie
    'T20',    # flake8-print
    'YTT',    # flake8-2020
    'ANN',    # flake8-annotations
    'ASYNC',  # flake8-async
    'S',      # flake8-bandit
    'BLE',    # flake8-blind-except
    'FBT',    # flake8-boolean-trap
    'B904',   # raise-without-from-inside-except
    'ERA',    # eradicate
    'PD',     # pandas-vet
    'PGH',    # pygrep-hooks
    'PT',     # flake8-pytest-style
    'RET',    # flake8-return
    'SLF',    # flake8-self
    'SLOT',   # flake8-slots
    'TRY',    # tryceratops
    'FA',     # flake8-future-annotations
    'ISC',    # flake8-implicit-str-concat
    'PTH',    # flake8-use-pathlib
    'PERF',   # perflint
    'NPY',    # numpy
]
ignore = [
    'COM812',  # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = [
    "S101",     # assert
    "PLR2004",  # magic values in tests
    "SLF001",   # unit tests exercise private helpers
    "PLR6301",  # mock stand-ins for protocol methods
    "RUF029",   # async stubs patched onto asyncio.to_thread
    "ANN401",   # flexible test doubles
    "ARG001",   # unused click.Context / mock parameters
    "ARG002",   # unused **kwargs on mock protocol methods
    "ANN202",   # mock async generators omit return annotations
    "PLC2701",  # import private console helpers under test
    "PLC0415",  # localized imports in large coverage tests
]

[tool.ruff.lint.isort]
known-first-party = ["naminter"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--cov=naminter",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["naminter"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.(\\s*#.*)?$",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = false
executionEnvironments = [{ root = "tests", reportPrivateUsage = false }]
